add: teacher isolation, generate works, auth(ауф)
